--- a/source/form.html
+++ b/source/form.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>HTML Academy: Пинк</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -21,54 +22,51 @@
 
     <header class="page-header">
 
-        <div class="page-header__top">
-          <div class="page-header__wrapper">
-            <div class="page-header__logo logo">
-              <a href="index.html">
-                <svg class="logo__icon" width="60" height="45">
-                  <use xlink:href="#icon-logo" x="0" y="0" />
-                </svg>PINK
-              </a>
-            </div>
-            <button class="page-header__hamburger" type="button">
-              <span class="visually-hidden">Управление меню</span>
-            </button>
-            <nav class="page-header__navigation main-nav">
-              <ul class="main-nav__list">
-                <li class="main-nav__item">
-                  <a class="main-nav__link" href="index.html">Главная</a>
-                </li>
-                <li class="main-nav__item">
-                  <a class="main-nav__link" href="photo.html">Фотографии</a>
-                </li>
-                <li class="main-nav__item main-nav__item--active">
-                  <a class="main-nav__link">Конкурс</a>
-                </li>
-                <li class="main-nav__item">
-                  <a class="main-nav__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-                </li>
-              </ul>
-            </nav>
-          </div> <!-- wrapper -->
-        </div> <!-- page-header__top -->
+      <div class="page-header__top page-header__top--open">
+        <div class="page-header__wrapper">
+          <a class="page-header__logo" href="index.html">
+            <img src="img/logo-pink-white-mobile.svg" width="74" height="22">
+          </a>
+          <button class="page-header__hamburger page-header__hamburger--open" type="button">
+            <span class="visually-hidden">Открыть меню</span>
+          </button>
+          <nav class="page-header__navigation main-nav">
+            <ul class="main-nav__list">
+              <li class="main-nav__item main-nav__item--active">
+                <a class="main-nav__link" href="index.html">Главная</a>
+              </li>
+              <li class="main-nav__item">
+                <a class="main-nav__link" href="photo.html">Фотографии</a>
+              </li>
+              <li class="main-nav__item">
+                <a class="main-nav__link">Конкурс</a>
+              </li>
+              <li class="main-nav__item">
+                <a class="main-nav__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+              </li>
+            </ul>
+          </nav>
+        </div> <!-- wrapper -->
+      </div> <!-- page-header__top -->
 
-        <div class="page-header__intro intro">
-          <div class="intro__wrapper">
-            <h1 class="intro__title">Конкурс на самое безбашенное путешествие с Пинк</h1>
-          </div> <!-- wrapper -->
-        </div> <!-- page-header__intro -->
+      <div class="page-header__intro intro">
+        <div class="intro__wrapper">
+          <h1 class="intro__title">Конкурс на самое безбашенное путешествие с Пинк</h1>
+        </div> <!-- wrapper -->
+      </div> <!-- page-header__intro -->
 
-      </header>
+    </header>
 
     <main class="page-content">
 
       <section class="page-content__contest contest">
 
         <div class="contest__wrapper contest__header">
-          <h2 class="page-content__title contest__title">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</h2>
+          <h2 class="contest__title">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту! </h2>
         </div> <!-- contest__header -->
 
         <form class="contest__form form" method="get" action="https://echo.htmlacademy.ru">
+
           <fieldset class="contest__contestant">
             <legend class="visually-hidden">Ваше ФИО:</legend>
             <div class="contest__wrapper">
@@ -80,121 +78,116 @@
               <input class="form__text-field" type="text" id="sur-name-field" name="sur-name" placeholder="Ну и отчество тоже">
             </div>
           </fieldset>
-          <fieldset class="contest__achievement achievement">
-            <legend class="achievement__legend">Ваши безбашинные достижения в путешествии</legend>
+
+          <fieldset class="contest__achievement">
+            <legend class="visually-hidden">Контактные сведения</legend>
             <div class="contest__wrapper">
-              <ul>
-                <li class="achievement__option">
-                  <input class="visually-hidden form__checkbox" type="checkbox" name="achievement-item-1" id="achievement-item-field-1" checked>
-                  <label class="form__label" for="achievement-item-field-1">Сделал селфи с акулой</label>
+              <h3 class="form__legend">Ваши безбашинные достижения в путешествии</h3>
+              <ul class="form__list">
+                <li class="form__option">
+                  <input class="visually-hidden form__check" type="checkbox" name="achievement-item-1" id="achievement-item-field-1" checked>
+                  <label class="form__label-in-list form__checkbox" for="achievement-item-field-1">Сделал селфи с акулой</label>
                 </li>
-                <li class="achievement__option">
-                  <input class="visually-hidden form__checkbox" type="checkbox" name="achievement-item-2" id="achievement-item-field-2" checked>
-                  <label class="form__label" for="achievement-item-field-2">Обгорел на пляже</label>
+                <li class="form__option">
+                  <input class="visually-hidden form__check" type="checkbox" name="achievement-item-2" id="achievement-item-field-2" checked>
+                  <label class="form__label-in-list form__checkbox" for="achievement-item-field-2">Обгорел на пляже</label>
                 </li>
-                <li class="achievement__option">
-                  <input class="visually-hidden form__checkbox" type="checkbox" name="achievement-item-3" id="achievement-item-field-3">
-                  <label class="form__label" for="achievement-item-field-3">Видел Чака Норриса</label>
+                <li class="form__option">
+                  <input class="visually-hidden form__check" type="checkbox" name="achievement-item-3" id="achievement-item-field-3">
+                  <label class="form__label-in-list form__checkbox" for="achievement-item-field-3">Видел Чака Норриса</label>
                 </li>
-                <li class="achievement__option">
-                  <input class="visually-hidden form__checkbox" type="checkbox" name="achievement-item-4" id="achievement-item-field-4">
-                  <label class="form__label" for="achievement-item-field-4">Накупил сувениров</label>
+                <li class="form__option">
+                  <input class="visually-hidden form__check" type="checkbox" name="achievement-item-4" id="achievement-item-field-4">
+                  <label class="form__label-in-list form__checkbox" for="achievement-item-field-4">Накупил сувениров</label>
                 </li>
-                <li class="achievement__option">
-                  <input class="visually-hidden form__checkbox" type="checkbox" name="achievement-item-5" id="achievement-item-field-5" checked>
-                  <label class="form__label" for="achievement-item-field-5" >Удержал башню</label>
-                <li class="achievement__option">
-                  <input class="visually-hidden form__checkbox" type="checkbox" name="achievement-item-6" id="achievement-item-field-6">
-                  <label class="form__label" for="achievement-item-field-6">Разгромил отель</label>
+                <li class="form__option">
+                  <input class="visually-hidden form__check" type="checkbox" name="achievement-item-5" id="achievement-item-field-5" checked>
+                  <label class="form__label-in-list form__checkbox" for="achievement-item-field-5" >Удержал башню</label>
+                <li class="form__option">
+                  <input class="visually-hidden form__check" type="checkbox" name="achievement-item-6" id="achievement-item-field-6">
+                  <label class="form__label-in-list form__checkbox" for="achievement-item-field-6">Разгромил отель</label>
                 </li>
               </ul>
             </div>
           </fieldset>
-          <fieldset class="contest__contact contact-form">
-            <legend class="visually-hidden">Ваше ФИО:</legend>
+
+          <fieldset class="contest__contact">
+            <legend class="visually-hidden">Контактные сведения</legend>
             <div class="contest__wrapper">
-              <label class="form__text-field" for="phone-number-field">Номер телефона</label>
-              <input class="form__checkbox" type="tel" name="phone" pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}" placeholder="Номер пожалуйста" id="phone-number-field">
+              <label class="form__label" for="phone-number-field">Номер телефона</label>
+              <input class="form__text-field" type="tel" name="phone" pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}" placeholder="Номер пожалуйста" id="phone-number-field">
               <label class="form__label" for="email-field">Адрес почты</label>
               <input class="form__text-field" type="email" id="email-field" name="email" placeholder="Введите почту *" required>
             </div>
           </fieldset>
-          <fieldset class="contest__apps apps-fields">
-            <legend class="apps-fields__legend">С каким приложением путешествовали?</legend>
+
+          <fieldset class="contest__apps">
+            <legend class="visually-hidden">Выбор приложения</legend>
             <div class="contest__wrapper">
-              <ul>
-                <li class="apps-fields__option">
-                  <input class="visually-hidden form__radio" type="radio" name="apps" id="apps-item-field-1" checked>
-                  <label class="form__label" for="apps-item-field-1">Pink для iOS</label>
+              <h3 class="form__legend">С каким приложением путешествовали?</h3>
+              <ul class="form__list">
+                <li class="form__option">
+                  <input class="visually-hidden form__check" type="radio" name="apps" id="apps-item-field-1" checked>
+                  <label class="form__label-in-list form__radio" for="apps-item-field-1">Pink для iOS</label>
                 </li>
-                <li class="apps-fields__option">
-                  <input class="visually-hidden form__radio" type="radio" name="apps" id="apps-item-field-2" checked>
-                  <label class="form__label" for="apps-item-field-2">Pink для Android</label>
+                <li class="form__option">
+                  <input class="visually-hidden form__check" type="radio" name="apps" id="apps-item-field-2">
+                  <label class="form__label-in-list form__radio" for="apps-item-field-2">Pink для Android</label>
                 </li>
-                <li class="apps-fields__option">
-                  <input class="visually-hidden form__radio" type="radio" name="apps" id="apps-item-field-3" checked>
-                  <label class="form__label" for="apps-item-field-3">Windows Phone</label>
+                <li class="form__option">
+                  <input class="visually-hidden form__check" type="radio" name="apps" id="apps-item-field-3">
+                  <label class="form__label-in-list form__radio" for="apps-item-field-3">Windows Phone</label>
                 </li>
               </ul>
             </div>
           </fieldset>
-          <fieldset class="contest__comment comments">
-            <legend class="comments__legend">Опишите свои эмоции</legend>
+
+          <fieldset class="contest__comment">
+            <legend class="visually-hidden">Выбор приложения</legend>
             <div class="contest__wrapper">
-              <textarea class="form__textarea" name="comment" rows="6" placeholder="Можно прям в красках, не стесняйтесь в выражениях" id="comment-field"> </textarea>
+              <h3 class="form__legend">Опишите свои эмоции</h3>
+              <textarea class="form__textarea" name="comment" rows="5" placeholder="Можно прям в красках, не стесняйтесь в выражениях" id="comment-field"></textarea>
             </div>
           </fieldset>
+
           <div class="contest__wrapper">
             <button class="button form__submit" type="submit">Отправить форму</button>
-            <p class=""><span class="">*</span> — обязательные поля</p>
+            <p class="form__submit-text"><span class="form__submit-text--red">*</span> — обязательные поля</p>
           </div>
+
         </form>
 
       </section> <!-- page-content__contest -->
 
     </main>
 
-    <footer class="page-footer footer">
+    <footer class="footer">
       <div class="footer__wrapper">
-        <div class="footer__logo logo">
-          <a href="index.html">
-            <svg class="logo__icon" width="60" height="45">
-              <use xlink:href="#icon-logo" x="0" y="0" />
-            </svg>PINK
-          </a>
-        </div>
+        <a class="footer__logo" href="index.html">
+          <img src="img/logo-pink-blue-mobile.svg" width="147" height="40" alt="PINK">
+        </a>
         <ul class="footer__social social">
-          <li>
+          <li class="social__item">
             <a class="social__button social__button--twitter" href="#">
-              <svg class="social__icon" width="18" height="14">
-                <use xlink:href="#icon-twitter" x="0" y="0" />
-              </svg>
               <span class="visually-hidden">Twitter</span>
             </a>
           </li>
-          <li>
+          <li class="social__item">
             <a class="social__button social__button--facebook" href="#">
-              <svg class="social__icon" width="9" height="18">
-                <use xlink:href="#icon-facebook" x="0" y="0" />
-              </svg>
               <span class="visually-hidden">Facebook</span>
             </a>
           </li>
-          <li>
+          <li class="social__item">
             <a class="social__button social__button--youtube" href="#">
-              <svg class="social__icon" width="15" height="13">
-                <use xlink:href="#icon-youtube" x="0" y="0" />
-              </svg>
               <span class="visually-hidden">YouTube</span>
             </a>
           </li>
         </ul>
         <p class="footer__developper">
-          Разработано
-          <a href="https://htmlacademy.ru/intensive/htmlcss">
-            <svg class="social__icon" width="15" height="13">
-              <use xlink:href="#icon-htmlacademy" x="0" y="0" />
-            </svg><span class="visually-hidden">htmlacademy.ru</span>
+          <a class="footer__copyright" href="https://htmlacademy.ru/intensive/htmlcss">
+            Разработано
+            <img src="img/htmlacademy.svg" width="27" height="34">
+            <span class="visually-hidden">htmlacademy.ru</span>
           </a>
         </p>
       </div> <!-- wrapper -->
