Адаптивная сетка для effects

--- a/source/index.html
+++ b/source/index.html
@@ -122,6 +122,19 @@
         </div>
       </section>
 
+      <section class="page-content__effect">
+        <div class="effect">
+          <div class="effect__timer">
+            <span class="effect__time">24</span>
+          </div>
+          <div class="effect__content">
+            <h3 class="effect__title">Эффект на&nbsp;24 часа!</h3>
+            <p class="effect__description">Британские ученые провели исследования и доказали, что&nbsp;положительный эффект от использования приложения длится целые сутки!</p>
+            <a class="effect__link" href="#">Узнать больше об исследовании</a>
+          </div>
+        </div>
+      </section>
+
       <!-- <section class="page-content__reviews reviews reviews-slider">
         <div class="reviews__wrapper">
           <h2 class="visually-hidden">Отзывы:</h2>
@@ -147,7 +160,7 @@
         </div>
       </section>
 
-      <section class="page-content__rates rates">
+      <!-- <section class="page-content__rates rates">
         <div class="rates__wrapper">
           <h2 class="visually-hidden">Тарифы:</h2>
           <table class="rates__table rate">
